# voice-transcription-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: compression.py  config.py  dependencies.py  logging_setup.py  main.py  models.py  retry_queue.py  storage.py  transcription_service.py  whisper_client.py
app/routes/: health.py  transcribe.py
tests/: conftest.py  test_compression.py  test_transcribe.py  test_whisper_client.py
