[project]
name = "voice-transcription-service"
version = "0.1.0"
description = "Voice-to-text transcription service backed by OpenAI Whisper with object storage and queued fallback"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Olivium / Jeeb", email = "engineering@olivium.dev" }]
dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.36",
    "python-multipart>=0.0.20",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "openai>=1.55,<2",
    "boto3>=1.35,<2",
    "redis>=5.2,<6",
    "structlog>=24.4,<25",
    "httpx>=0.27,<0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<0.27",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<0.13",
    "mypy>=1.13,<2",
    "respx>=0.22,<0.23",
    "moto[s3]>=5.0,<6",
    "fakeredis>=2.26,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# B008: FastAPI's Depends() in defaults is the documented idiom.
# RUF002: docstrings may contain typographic punctuation; not a real ambiguity risk.
ignore = ["B008", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=app --cov-branch --cov-report=term-missing"
testpaths = ["tests"]
